--- a/public/library.html
+++ b/public/library.html
@@ -11,15 +11,16 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
-<body>
-  <header>
+<body class="library">
+<!--   <header>
     <h1>Dewey</h1>
-  </header>
+  </header> -->
 
   <!-- Navigation Bar -->
   <nav class="z-depth-0">
     <div class="nav-wrapper">
-      <ul id="nav-mobile" class="left hide-on-med-and-down">
+    <a href="library.html" class="brand-logo"><h1>Dewey</h1></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="library.html">My Library</a></li>
         <li><a href="groups.html">Groups</a></li>
         <li><a href="discussions.html">Discussions</a></li>
