google API additions

--- a/public/library.html
+++ b/public/library.html
@@ -7,7 +7,7 @@
   <!-- Latest compiled and minified CSS & JS -->
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.css">
-  <link href="https://fonts.googleapis.com/css?family=McLaren|Raleway|Grand+Hotel" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata|PT+Mono|Saira+Semi+Condensed|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
@@ -19,7 +19,7 @@
   <!-- Navigation Bar -->
   <nav class="z-depth-0">
     <div class="nav-wrapper">
-    <a href="library.html" class="brand-logo"><h1>Dewey</h1></a>
+    <a href="library.html" class="brand-logo"><h1>Dewey.</h1></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="library.html">My Library</a></li>
         <li><a href="groups.html">Groups</a></li>
@@ -32,9 +32,9 @@
   <!-- Container to create and show books -->
   <div class="container">
     <div class="row">
-      <div class="col s6">
+      <div class="col s4">
         <div class="bookList">
-          <h2>My library</h2>
+          <h2>My Bookshelf</h2>
           
           <!-- Modal Trigger -->
           <a class="btn modal-trigger" href="#modal1" id="modalButton">Add a Book</a>
@@ -43,10 +43,15 @@
           <table id="tableLibrary"></table>
         </div>
       </div>
-      <div class="col s6">
+      <div class="col s8">
         <div class="bookInfo">
-          <h2>Book Information</h2> 
-          <div id ="chooseBook"></div>
+          <h2>Book Report</h2> 
+          <p id="chooseTitle"></p>
+          <p id="chooseAuthor"></p>
+          <p id="chooseRate"></p>
+          <p id="chooseSummary"></p>
+          <p id="chooseComments"></p>
+          <img src="" id="chooseImage">
         </div>
       </div>
     </div>
@@ -60,9 +65,7 @@
         <label for="title">Title</label>
         <input type="text" id="title">
         <label for="author">Author</label>
-        <input type="text" id="author">
-        <label for="genre">Genre</label>
-        <input type="text" id="genre">        
+        <input type="text" id="author">       
         <label for="comments">Comments</label>
         <input type="text" id="comments">
       </form>
