--- a/public/library.html
+++ b/public/library.html
@@ -20,11 +20,8 @@
   <!-- Navigation Bar -->
   <nav class="z-depth-0">
     <div class="nav-wrapper">
-<<<<<<< HEAD
-    <a href="#" class="brand-logo"><h1>Dewey</h1></a>
-=======
+    <a href="library.html" class="brand-logo"><h1>Dewey</h1></a>
     <a href="library.html" class="brand-logo"><h1>Dewey.</h1></a>
->>>>>>> 5c8a67180e9cc4417879d397e6a698baa9326a47
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="library.html">My Library</a></li>
         <li><a href="groups.html">Groups</a></li>
