--- a/public/library.html
+++ b/public/library.html
@@ -25,6 +25,7 @@
         <li><a href="groups.html">Groups</a></li>
         <li><a href="discussions.html">Discussions</a></li>
         <li><a href="discover.html">Discover</a></li>
+        <li><a href="login.html" id="logout">Log Out</a></li>
       </ul>
     </div>
   </nav>
@@ -76,6 +77,7 @@
   </div>
 
   <!-- Custom Script -->
+  <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
   <script type="text/javascript" src="js/library.js"></script>
