--- a/public/groups.html
+++ b/public/groups.html
@@ -36,6 +36,7 @@
             <div class="col s10 offset-s1">
                 <div class="groups">
                     <h2>My Groups</h2>
+                    <a class="waves-effect waves-light btn" href="#groups-modal" id="join-groups">Join New Group</a>
 
                     <!-- Generate List of Discussions here and ability to open individual chats-->
                     <div>
@@ -46,6 +47,25 @@
 
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div id="groups-modal" class="modal">
+        <div class="modal-content">
+            <h4>Join Groups</h4>
+            <form class="col s12">
+                <div class="row">
+                    <div id="groups"></div>
+                    <div class="chips chips-autocomplete"></div>
+                </div>
+                <div class="modal-footer">
+                    <div class="row">
+                        <div class="col s12"></div>
+                    </div>
+                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn">Close</a>
+                    <a href="#!" class="waves-effect waves-green btn" id="add-user">Join</a>
+                </div>
+            </form>
         </div>
     </div>
 
@@ -68,7 +88,7 @@
                     <div class="row">
                         <div class="col s12"></div>
                     </div>
-                    <a href="#!" class="modal-action modal-close waves-effect waves-green btn">Close</a>
+                    <a href="#!" class="modal-action modal-close waves-effect btn">Close</a>
                     <a href="#!" class="waves-effect waves-green btn" id="add-user">Add</a>
                 </div>
             </form>
