--- a/public/login.html
+++ b/public/login.html
@@ -34,7 +34,7 @@
               <input type="text" id="email1">
               <label for="password1">Password</label>
               <input type="password" id="password1">
-              <a href="library.html" id="submitLogin"><button class="btn waves-effect waves-light" > Submit</button></a>
+              <a href="library.html" id="submitLogin"><button class="btn waves-effect waves-light" type="submit"> Submit</button></a>
               <a class="btn modal-trigger" href="#modal2" id="modalButton">New User</a>
             </form>
           </div>
