fixing group and discussions so they work when there aren't discussions made

--- a/public/groups.html
+++ b/public/groups.html
@@ -68,7 +68,7 @@
 
     <div id="new-group-modal" class="modal">
         <div class="modal-content">
-            <h4>Creat a Group</h4>
+            <h4>Create a Group</h4>
             <form class="col s12">
                 <div class="row">
                     <div class="input-field col s8">
