--- a/public/discussions.html
+++ b/public/discussions.html
@@ -17,12 +17,12 @@
   <!-- Navigation Bar -->
   <nav class="z-depth-0">
     <div class="nav-wrapper">
-    <a href="library.html" class="brand-logo"><h1>Dewey</h1></a>
+    <a href="library.html" class="brand-logo"><h1>Dewey.</h1></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="library.html">My Library</a></li>
+        <li><a href="library.html" id="libraryPage">My Library</a></li>
         <li><a href="groups.html">Groups</a></li>
-        <li><a href="discussions.html">Discussions</a></li>
         <li><a href="discover.html">Discover</a></li>
+        <li><a href="login.html" id="logout">Log Out</a></li>
       </ul>
     </div>
   </nav>
