adding firebase button

--- a/public/groups.html
+++ b/public/groups.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Discussions</title>
+    <title>Groups</title>
     <!-- Latest compiled and minified CSS & JS -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
@@ -34,6 +34,7 @@
             <div class="col s10 offset-s1">
                 <div class="groups">
                     <h2>My Groups</h2>
+                    <a class="btn-flat btn" id="button">Button</a>
                     <a class="waves-effect waves-light btn" href="#new-group-modal" id="create-group">Create New Group</a>
                     <a class="waves-effect waves-light btn" href="#groups-modal" id="join-groups">Join A Group</a>
 
@@ -159,7 +160,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
     <script type="text/javascript" src="js/groups.js"></script>
-    <script type="text/javascript" src="js/discussion.js"></script>
+    <!-- <script type="text/javascript" src="js/discussion.js"></script> -->
 
 
 </body>
