--- a/public/discover.html
+++ b/public/discover.html
@@ -32,7 +32,7 @@
    
 <!-- Cards Container -->
 
-<div class="container">
+<div class="container-cards">
  
   <div class="row">
     <div class="col s10 m5">
@@ -44,7 +44,7 @@
         </div>
         <div class="card-content">
           <p>Find new books that my interest you here.</p>  
-          <div class="search-wrapper card">
+          <div class="search-wrapper-card">
               <input id="search"> 
               <a class="btn modal-trigger" href="#modal1" id="findNewBk"><i class="material-icons left">search</i>find</a>
               <div class="search-results"></div>
@@ -61,7 +61,7 @@
         </div>
         <div class="card-content">
           <p>Find books from your favorite author here.</p>
-            <div class="search-wrapper card">
+            <div class="search-wrapper-card">
             <input id="search"> 
             <a class="waves-effect waves-light btn" id="findAuthBk"><i class="material-icons left">search</i>find</a>
             <div class="search-results"></div>
@@ -82,7 +82,7 @@
         </div>
         <div class="card-content">
           <p>Find a list of top selling books here.</p>
-              <div class="search-wrapper card">
+              <div class="search-wrapper-card">
               <input id="search"> 
               <a class="waves-effect waves-light btn" id="findBestList"><i class="material-icons left">search</i>find</a>
               <div class="search-results"></div>
@@ -99,7 +99,7 @@
         </div>
         <div class="card-content">
           <p>Find recently reviewed books here.</p>
-              <div class="search-wrapper card">
+              <div class="search-wrapper-card">
               <input id="search"> 
               <a class="waves-effect waves-light btn" id="findReviewed"><i class="material-icons left">search</i>find</a>
               <div class="search-results"></div>
@@ -110,9 +110,7 @@
 
   </div>
 
-       <!-- Modal Trigger -->
-  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
-
+   
   <!-- Modal Structure -->
   <div id="modal1" class="modal modal-fixed-footer">
     <div class="modal-content">
