--- a/public/login.html
+++ b/public/login.html
@@ -29,13 +29,17 @@
       <div class="col s6">
           <div class="login">
             <h2>Login</h2>
-            <form>
-              <label for="email1">Email</label>
-              <input type="text" id="email1">
-              <label for="password1">Password</label>
-              <input type="password" id="password1">
-              <a href="library.html" id="submitLogin"><button class="btn waves-effect waves-light" type="submit"> Submit</button></a>
-              <a class="btn modal-trigger" href="#modal2" id="modalButton">New User</a>
+              <form action="/login" method="post">
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="text" class="form-control" name="email">
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" class="form-control" name="password">
+                </div>
+
+                <button type="submit" class="btn btn-warning btn-lg">Login</button>
             </form>
           </div>
       </div>
@@ -46,7 +50,7 @@
 
   <!-- Modal Structure -->
 <div id="modal2" class="modal">
-  <div class="modal-content">
+  <div class="modal-content form-group">
     <form>
       <label for="email2">Email</label>
       <br>
@@ -60,11 +64,12 @@
       <label for="passwordCheck">Re-type your Password</label>
       <br>
       <input type="password" id="passwordCheck">
+      <div class="modal-footer">
+        <a href="#!" class="modal-action modal-close btn-flat"  id="submitNewUser">Signup</a>
+      </div>
     </form>
   </div>
-  <div class="modal-footer">
-    <a href="#!" class="modal-action modal-close btn-flat"  id="submitNewUser">Add</a>
-  </div>
+  
 </div>
 
   <!-- Custom Script -->
