--- a/public/login.html
+++ b/public/login.html
@@ -55,13 +55,13 @@
     <form>
       <label for="email2">Email</label>
       <br>
-      <input type="text" id="email2">
+      <input type="text" id="email">
       <label for="username">Username</label>
       <br>
       <input type="text" id="username">
-      <label for="password2">Enter a Password</label>
+      <label for="newPassword">Enter a Password</label>
       <br>
-      <input type="password" id="password2">
+      <input type="password" id="password">
       <label for="passwordCheck">Re-type your Password</label>
       <br>
       <input type="password" id="passwordCheck">
