--- a/public/login.html
+++ b/public/login.html
@@ -36,7 +36,7 @@
                   </div>
                   <div>
                       <label>Password:</label>
-                      <input type="password" name="password"/>
+                      <input type="password" name="password1"/>
                   </div>
                   <div>
                       <input type="submit" value="Log In"/>
@@ -53,7 +53,7 @@
   <!-- Modal Structure -->
 <div id="modal2" class="modal">
   <div class="modal-content form-group">
-    <form action="/signup" method="post">
+    <form>
       <div class="form-group">
         <label>Email</label>
         <input type="text" id="email" name="email">
@@ -63,8 +63,8 @@
         <input type="text" id="username" name="username">
       </div>
       <div class="form-group">
-        <label>Enter a Password</label>
-        <input type="text" id="password" name="password">
+        <label>Password</label>
+        <input type="text" id="secret" name="secret">
       </div>
 <!--       <label for="passwordCheck">Re-type your Password</label>
       <br>
